fixed: top bar z-index corrected so it stays on top of everything else

--- a/src/css/devContainer.css
+++ b/src/css/devContainer.css
@@ -4,7 +4,7 @@
     width: fit-content;
     height: min(20vw, 144px);
     transform: translate(calc(50vw - 50%), calc(50vh - 50%));
-    z-index: 10;
+    z-index: 10 !important;
     /*background-color: blue;*/
 }
 
